--- a/README
+++ b/README
@@ -5,3 +5,6 @@ Este proyecto es una página web creada con html,css
 y utilizando elementos de Bootstrap.
 
 Tiene como tématica el blog personal de un gato.
+
+No soy dueño de las imagenes utilizadas en la página web.
+Su uso es unicamente con propositos académicos.
